--- a/config/application.yml
+++ b/config/application.yml
@@ -20,19 +20,19 @@ development:
 test:
 
 production:
-  OcuID: "97e7ded242a95b762a1c74200523af5c"
-  OcuKey: "50d162f720f7c5100ef64f53daf10b65"
+  OcuID: "a0353b3417f22f1de30a836ba6ac3400"
+  OcuKey: "b2b6acb1b01044c3bd611e51c1e2fc3c"
   host: "http://m.dehuinet.com:3001"
-  server_host: "http://dev.dehuinet.com:81"
+  server_host: "http://huatai.dehuinet.com:84"
   domain: "dehui220.com.cn"
   reminder_mail: "reminder@dehui220.com.cn"
   reminder_password: "5ec218c78cb8b5d6d18040e2b35d91a4"
   imap:
-    address: "mail.dehui220.com.cn"
+    address: "192.168.100.220"
     port: 993
     enable_ssl: true
   smtp:
-    address: "mail.dehui220.com.cn"
+    address: "192.168.100.220"
     port: 465
     openssl_verify_mode: "none"
     authentication : "login"
